--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "q": "^1.4.1",
     "restler": "^3.4.0",
     "underscore": "^1.8.3",
-    "winston": "^2.3.1"
+    "winston": "^2.3.1",
+    "y18n": "4.0.1"
   },
   "devDependencies": {
     "electron": "9.4.0",
